# djconnect-pi

./: .gitignore  AGENTS.md  BOOTSTRAP.md  BOOTSTRAP_CODEX_SESSION.md  CANONICAL_REFERENCES.md  CHANGELOG.md  CHAT_BOOTSTRAP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_ENVIRONMENT.md  DJCONNECT_FOUNDATION.md  ENGINEERING_STATUS.md  HANDOFF.md  ISSUES.md  MANAGEMENT_SUMMARY.md  NEXT_CHAT_PROMPT.md  PI_PROFILE_ADOPTION_REPORT.md  PROMPT_INDEX.md  README.md  REPOSITORY_STATUS.md  ROADMAP_INDEX.md  SECURITY.md  SYNC_PROMPTS.md  TESTS.md  TODO.md  cleanup_old_releases.sh  pyproject.toml  release.sh
Tools/: contract_fixture.js  ha_contract.js  http_e2e_contract.js  validate_ha_contract_fixture_security.js  websocket_e2e_contract.js
docs/: ARCHITECTURE.md  BOOTSTRAP.md  PERFORMANCE_SECURITY.md  TDE_OBSERVE_EXIT_CRITERIA.md  TDE_OBSERVE_PILOT.md  TECHNICAL_DESIGN_DECISIONS.md
examples/: voice_intents.json
scripts/: bootstrap_raspberry_pi_os.sh  build_release.sh  install.sh  install_raspberry_pi.sh
systemd/: djconnect-api.service  djconnect-client.service  djconnect-maintenance.service  djconnect-maintenance.timer  djconnect-nightly-reboot.service  djconnect-nightly-reboot.timer  djconnect-screen-off.service  djconnect-screen-off.timer  djconnect-screen-on.service  djconnect-screen-on.timer  djconnect-update-ui.service  djconnect-updater.service  djconnect-updater.timer  djconnect-watchdog.service  djconnect-watchdog.timer
tests/: postman_mock_server.py  test_app_backend.py  test_client_api.py  test_client_api_daemon.py  test_client_contract_fixtures.py  (+11 more)
(+47 files in other folders)
