[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "djconnect-pi"
version = "3.1.19"
description = "Raspberry Pi touch display client for DJConnect"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7",
  "requests>=2.31",
  "zeroconf>=0.132",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
djconnect-pi-client = "djconnect_pi.app:main"
djconnect-pi-api = "djconnect_pi.client_api_daemon:main"
djconnect-pi-updater = "djconnect_pi.updater:main"
djconnect-pi-maintenance = "djconnect_pi.maintenance:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"djconnect_pi.qml" = ["*.qml"]
